Fixed Scrollbar

--- a/css/style.scss
+++ b/css/style.scss
@@ -181,3 +181,11 @@ MENU STYLES
 {
     background-color: #333;
 }
+
+html {
+  overflow:   scroll;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
